fixed header spacing

--- a/static/global.css
+++ b/static/global.css
@@ -8,11 +8,13 @@
 body {
   height: 100vh;
   width: 100vw;
-  background-image: linear-gradient( 135deg, #f7b268 10%, #FD6585 100%);
+  background-image: linear-gradient( 135deg, #cdf93d 10%, #58CFFB 100%);
   margin: auto;
+  font-family: "DynaPuff";
 }
+
 h1 {
-  font-family: "Poppins", sans-serif;
+  color: #22232e;
 }
 h1 span {
   margin: 0 auto;
@@ -106,7 +108,7 @@ h1 span:nth-child(7)::before {
   color-scheme: dark light;
 }
 
-.welcome_container{
+.welcome_container {
   text-align: center;
   font-size: 2rem;
 }
@@ -116,40 +118,52 @@ h1 span:nth-child(7)::before {
 }
 
 header {
-  display: grid;
-  grid-template-columns: 1fr auto 1fr;
-  /* justify-content: space-between;
-  align-items: center; */
+  display: flex;
+  font-size: 1.3rem;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  color: #22232e;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+nav {
+  display: flex;
+  list-style: none; /* Removes default list styling */
+}
 
-  nav {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+.left-nav,
+.right-nav {
+  flex: 1;
+}
 
-    li {
-      list-style-type: none;
+.left-nav {
+  justify-content: flex-start;
+}
 
-      margin-inline: 1em;
-    }
-  }
-  
-  nav a {
-    color:#22232e;
-  }
+.right-nav {
+  justify-content: flex-end;
+}
 
-  nav:nth-of-type(2) {
-    justify-content: end;
-  }
+nav a {
+  color: #22232e;
+  text-decoration: none; /* Removes underline */
+  padding: 2rem; /* Vertical padding for clickability */
+  transition: color 0.3s ease; /* Smooth color transition */
+}
 
-  .user {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+nav a:hover {
+  color: #ac2142; /* Changes color on hover */
+}
 
-  img {
-    height: 4em;
-  }
+.user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
 
-  box-shadow: 0px 3px 5px 5px #7f001e7d;
+.user img {
+  height: 3rem;
+  border-radius: 50%; /* Circle image*/
+  margin-bottom: 1em; /* Space between image and text */
 }
